// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner renders 1`] = `
<div
  className="container"
  data-testid="spinner"
>
  <svg
    className="svg"
    data-testid="svg"
    height="0"
    viewBox="0 0 100 100"
    width="0"
  >
    <circle
      className="circle"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      stroke="#177a00"
      strokeDasharray="89, 200"
      strokeDashoffset="0"
      strokeLinecap="round"
      strokeWidth="4"
    />
  </svg>
</div>
`;

exports[`Spinner renders with children 1`] = `
<div
  className="overlayContainer"
>
  <div
    className="container centered"
    data-testid="spinner"
  >
    <svg
      className="svg"
      data-testid="svg"
      height="0"
      viewBox="0 0 100 100"
      width="0"
    >
      <circle
        className="circle"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke="#177a00"
        strokeDasharray="89, 200"
        strokeDashoffset="0"
        strokeLinecap="round"
        strokeWidth="4"
      />
    </svg>
  </div>
  <div
    className="overlay"
    data-testid="overlay"
  />
  <div
    className="opaque"
  >
    <span>
      Overlay me with the spinner
    </span>
  </div>
</div>
`;
